@@ -1,0 +1,41 @@
+/* GdkPixbuf RGBA C-Source image dump */
+
+#ifdef __SUNPRO_C
+#pragma align 4 (blue_hatched_pattern_rgba)
+#endif
+#ifdef __GNUC__
+const unsigned char blue_hatched_pattern_rgba[] __attribute__ ((__aligned__ (4))) =
+#else
+const unsigned char blue_hatched_pattern_rgba[] = 
+#endif
+{ ""
+  /* Pixbuf magic (0x47646b50) */
+  "GdkP"
+  /* length: header (24) + pixel_data (400) */
+  "\0\0\1\250"
+  /* pixdata_type (0x1010002) */
+  "\1\1\0\2"
+  /* rowstride (40) */
+  "\0\0\0("
+  /* width (10) */
+  "\0\0\0\12"
+  /* height (10) */
+  "\0\0\0\12"
+  /* pixel_data: */
+  "G\226\377\377G\226\377\377G\226\377\374H\225\377Y\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0G\226\377wG\226\377\377G\226\377\374H\225\377Y\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0G\226\377wG\226\377\377G\226\377"
+  "\374H\225\377Y\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0G\226\377wG\226"
+  "\377\377G\226\377\377F\225\377T\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0G\226\377~G\226\377\377G\226\377\377G\226\377\373\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0G\226\377wG\226\377\377G\226\377\377G\226\377\374"
+  "G\226\377Z\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0G\226\377wG\226\377\377G\226"
+  "\377\377G\226\377\374G\226\377Z\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0G\226"
+  "\377wG\226\377\377G\226\377\377G\226\377\374G\226\377Z\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0G\226\377wG\226\377\377G\226\377\377G\226\377\374G"
+  "\226\377Z\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0G\226\377wG\226\377\377G\226"
+  "\377\377G\226\377\374G\226\377Z\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0G\226"
+  "\377wG\226\377\377G\226\377\377G\226\377\374G\226\377Z\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0"};
+
+const int blue_hatched_pattern_rgba_size = sizeof(blue_hatched_pattern_rgba);
