@@ -8,6 +8,7 @@ void loadBuiltInPix();
 extern Glib::RefPtr<Gdk::Pixbuf> redDot;
 extern Glib::RefPtr<Gdk::Pixbuf> yellowDot;
 extern Glib::RefPtr<Gdk::Pixbuf> blackLoop;
+extern Glib::RefPtr<Gdk::Pixbuf> blueHatchedPattern;
 extern Glib::RefPtr<Gdk::Pixbuf> grayLoop;
 
 #endif // GIGEDIT_BUILTIN_PIX
